--- a/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Manage/PagePersonalOrders.cshtml
+++ b/schliessanlagen-konfigurator/schliessanlagen-konfigurator/Areas/Identity/Pages/Account/Manage/PagePersonalOrders.cshtml
@@ -18,7 +18,7 @@
 
 <div class="row">
     <div class="col-md-6">
-        <div id="AllOrderUser">
+        <div id="AllOrderUser" class="shadow-lg p-3 mb-5 bg-body-tertiary rounded">
             @if (orderList!=null)
             {
                 @for (int z = 0; z < orderList.Count; z++)
